# forehead_pose_detect

./: .gitignore  CMakeLists.txt  README.md  face_landmark_detect.cpp
include/: headDetect.h
src/facemesh/: CMakeLists.txt
src/headDetec/: CMakeLists.txt  headDetect.cpp
